[gd_scene load_steps=4 format=3 uid="uid://b4d3x6v6m52qg"]

[ext_resource type="Texture2D" uid="uid://3a0nl4dfpu1y" path="res://assets/stamp/dokument1.png" id="1_n5or4"]
[ext_resource type="Script" path="res://Scripts/document/document.gd" id="1_xkojb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o707j"]
size = Vector2(66.5, 47.5)

[node name="Document1" type="Node2D"]
position = Vector2(-1, 1)
script = ExtResource("1_xkojb")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -223.0
offset_top = -145.0
offset_right = 256.0
offset_bottom = 177.0
size_flags_vertical = 3
texture = ExtResource("1_n5or4")
stretch_mode = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-45, 121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.25, 0.75)
shape = SubResource("RectangleShape2D_o707j")
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="area_document_1"]
