[gd_scene load_steps=4 format=3 uid="uid://cweao68v8xrh4"]

[ext_resource type="Texture2D" uid="uid://dc8u1u4wc6xig" path="res://assets/stamp/dokument4.png" id="1_e4fhu"]
[ext_resource type="Script" path="res://Scripts/document/document.gd" id="1_lef1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o707j"]
size = Vector2(69, 55)

[node name="Document4" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_lef1a")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -223.0
offset_top = -136.0
offset_right = 256.0
offset_bottom = 186.0
texture = ExtResource("1_e4fhu")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-45, 113)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 9)
shape = SubResource("RectangleShape2D_o707j")
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="area_document_4"]
