[gd_scene load_steps=4 format=3 uid="uid://bd5vosqnv1t0n"]

[ext_resource type="Script" path="res://Scripts/document/document.gd" id="1_a8jtv"]
[ext_resource type="Texture2D" uid="uid://h2uk81eo56x4" path="res://assets/pecatiranje/dokument6.png" id="1_d1i3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o707j"]
size = Vector2(64, 55)

[node name="Document6" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_a8jtv")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -220.0
offset_top = -129.0
offset_right = 259.0
offset_bottom = 193.0
texture = ExtResource("1_d1i3m")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(51, 132)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 1)
shape = SubResource("RectangleShape2D_o707j")
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="area_document_6"]
