extends Node2D

const LMAG = preload("res://assets/stamp/LMAG.png")

signal lmag_placed


func area_document_1(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.


func area_document_2(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.

func area_document_3(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.

func area_document_4(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.

func area_document_5(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.
	
func area_document_6(_body: Node2D) -> void:
	emit_signal("lmag_placed") # Replace with function body.
